[package]
name = "rsa_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.17.7"
hex = { version = "0.4.3", features = [] }
base64 = "0.21.7"
rpassword = "7.3.1"
tokio = { version = "1.0.0", features = ["full"] }
anyhow = "1.0.79"
glass_pumpkin = "1.0"
rand = "0.8.5"
num-bigint = "0.4.4"
num-traits = "0.2.18"
rsa = "0.9.6"
clap = "4.5.1"
